SC-175: removed card spacing no longer needed

--- a/source/_patterns/04-templates/content-stream/_content-stream.scss
+++ b/source/_patterns/04-templates/content-stream/_content-stream.scss
@@ -33,10 +33,6 @@
     }
   }
 
-  .usa-card {
-    @include u-margin-bottom(6);
-  }
-
   .usa-card__media {
     @include u-width(mobile);
 
